--- a/views/table_def.ejs
+++ b/views/table_def.ejs
@@ -15,10 +15,9 @@
 
       <%- include("_columns") %>
 
-      <h4 class="my-5">SQL</h4>
-      <code class="mt-4 p-4 fs-6">
-        <%= sqlDef %>
-      </code>
+      <h4 class="mb-4">SQL</h4>
+      <pre><code class="fs-6"><%=sqlDef%></code></pre>
+      
     </div>
   </div>
 </div>
