--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -5,8 +5,12 @@
     <title>sqlite-web</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    
     <style>
      pre {
+       padding: 1em;
+       background-color: #ffffee;
+       border: 1px solid #ccc;
        white-space: pre-wrap;
      }
     </style>
