--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -2,30 +2,39 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8"/>
-    <title>sqlite-web</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    
-    <style>
-     pre {
-       padding: 1em;
-       background-color: #ffffee;
-       border: 1px solid #ccc;
-       white-space: pre-wrap;
-     }
-    </style>
+    <title>SQLite Web</title>
+    <link href="/css/style.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/forms-min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/buttons-min.css" crossorigin="anonymous">
   </head>
-
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-md">
-        <a class="navbar-brand" href="/"><%= info.filename %></a>
-        <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Tables</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    <header>
+      <p class="crumbs">
+        <a href="/">home</a>
+      </p>
+    </header>
+
+      <% if (flash && flash.info)  { %>
+        <% for (const message of flash.info) { %>
+          <div class="flash flash-info">
+            <%= message %>
+          </div>
+        <% } %>
+      <% } %>
+
+      <% if (flash && flash.success)  { %>
+        <% for (const message of flash.success) { %>
+          <div class="flash flash-success">
+            <%= message %>
+          </div>
+        <% } %>
+      <% } %>
+
+      <% if (flash && flash.error)  { %>
+        <% for (const message of flash.error) { %>
+          <div class="flash flash-error">
+            <%= message %>
+          </div>
+        <% } %>
+      <% } %>
+    <section class="content">
